trying to fix footer on mobile

--- a/P2_lannoy_thomas/css/mobile.css
+++ b/P2_lannoy_thomas/css/mobile.css
@@ -190,10 +190,12 @@
     margin-bottom: -10px;
   }
   #footer {
-    padding-left: 25px;
+    padding: 25px 0px;
     margin: 0px;
 	display: flex;
+	align-items: center;
 	justify-content: center;
+	max-width:100%;
   }
   #searchTab {
     padding: 0px 20px;
